# overkill-pi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  TESTING.md  overkill-bootstrap.sh  pyproject.toml  setup.py
overkill/: __init__.py  configurator.py  installer.py  run_configurator.py  run_installer.py
overkill/core/: early_init.py  logger.py  system.py  utils.py
overkill/hardware/: overclock.py  profile_creator.py  silicon_tester.py  thermal_monitor.py
overkill/media/: addon_installer.py  addon_manager.py  kodi_builder.py  kodi_config.py
overkill/system/: kernel_optimizer.py  package_manager.py  tty_config.py
